# holepunch

./: .coveragerc  .dockerignore  .env  .env.production  .env.test  .gitignore  .projections.json  .python-version  Dockerfile  Dockerfile.production  Dockerfile.ssh  Pipfile  README.md  Taskfile.yml  dbsetup.sh  docker-compose.yml  holepunch.py  hpsetup.sh  local_ssh.hcl  requirements.txt  run_with_password.sh  setup.cfg  ssh.hcl  tunnel.hcl
.circleci/: config.yml
.github/: pull_request_template.md
.task/checksum/: release  release-ssh
app/: __init__.py  commands.py  models.py  serializers.py  settings.py
app/jobs/: email.py  nomad_cleanup.py  payment.py
app/routes/: account.py  admin.py  authentication.py  root.py  subdomains.py  tunnels.py
app/services/: authentication.py  subdomain.py  tunnel.py  user.py
app/templates/: health_check.j2.json  sshd.j2.json
app/utils/: db.py  dns.py  errors.py  general.py  json.py
certbotvault/: Dockerfile  updatecerts.sh
deploy/: holepunch-policy.hcl  holepunch.hcl  run_with_trickle.sh  ssh.hcl  start.sh  web.hcl
migrations/: alembic.ini
migrations/versions/: 083b261e3b0b_ensure_inuse_is_not_null.py  122ab8da0a64_add_tiers_to_users.py  144e9019ab26_change_port_to_array.py  1e1c9c5d8e58_add_plan_model_to_db.py  25853ecf738c_add_stripe_fields_to_user.py  3f63f2913228_drop_users_tier.py  64224f776e0f_add_confirmed_to_user_table.py  7d344f2b41a9_add_uuid_to_user_table.py  8813ddff05a2_add_tcp_ports_to_tunnel.py  c8493c83258e_baseline.py  (+3 more)
support/: corpus.json  plans.json
tests/: conftest.py  test_reset_password.py
(+94 files in other folders)
