[flake8]
max-line-length = 88

[tool:pytest]
addopts =
    --cov=app
    --cov-config=./setup.cfg
    --verbose
    --random-order

env_files =
    ./.env.test
    ./.env
filterwarnings =
    default::DeprecationWarning:__main__
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::ResourceWarning

[coverage:run]
omit =
    app/utils/scripts/*

[mypy]
ignore_missing_imports = True

[options.entry_points]
flask.commands =
    plan = app.commands:plan
